feat : 기본 요구사항 구현 및 불필요 코드 정리