@@ -1,12 +1,13 @@
 package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.entity.ChannelType;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import org.springframework.stereotype.Repository;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Repository
 public class FileChannelRepository extends AbstractFileRepository<Channel> implements ChannelRepository {
@@ -15,10 +16,17 @@ public class FileChannelRepository extends AbstractFileRepository<Channel> imple
         super("channels");
     }
 
-    public List<Channel> findAllByUserId(UUID userId){
+    public List<Channel> findAllByUserId(UUID userId) {
 
-        return data.values().stream()
+        List<Channel> channels = new ArrayList<>();
+
+        channels.addAll(data.values().stream()
+            .filter(c -> c.getType().equals(ChannelType.PUBLIC))
+            .toList());
+        channels.addAll(data.values().stream()
             .filter(c -> c.getUserIds().contains(userId))
-            .collect(Collectors.toList());
+            .toList());
+
+        return channels;
     }
 }
